--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cached_pdfview: ^0.4.1
+  flutter_downloader: ^1.9.1
   flutter_native_splash: ^2.2.11
   flutter_secure_storage: ^6.0.0
   flutter_spinkit: ^5.1.0
@@ -24,8 +25,10 @@ dependencies:
   get: ^4.6.5
   intl: ^0.17.0
   lottie: ^1.4.3
+  path_provider: ^2.0.11
   pie_chart: ^5.3.2
   qr_code_scanner: ^1.0.1
+  share_plus: ^6.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -54,3 +57,4 @@ flutter:
   #         weight: 700
   # Dependencies using target specific config
   # *FCM
+  # *flutter_downloader
