--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,11 @@ dependencies:
   get: ^4.6.5
   intl: ^0.17.0
   lottie: ^1.4.3
+  mobile_scanner: ^2.1.0
   path_provider: ^2.0.11
   pie_chart: ^5.3.2
-  qr_code_scanner: ^1.0.1
   share_plus: ^6.2.0
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -58,3 +59,4 @@ flutter:
   # Dependencies using target specific config
   # *FCM
   # *flutter_downloader
+  # *mobile_scanner Not done
