--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   pie_chart: ^5.3.2
   share_plus: ^6.2.0
   table_calendar: ^3.0.8
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
