--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.2+1
+version: 1.0.3+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
@@ -22,6 +22,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.1.5
   fluttertoast: ^8.1.1
+  webview_flutter: ^4.0.0
   get: ^4.6.5
 
   intl: ^0.17.0
@@ -35,8 +36,14 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.11.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/png/logo.png"
 
 flutter:
   uses-material-design: true
