--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,4 +74,4 @@ fonts:
   # Dependencies using target specific config
   # *FCM
   # *flutter_downloader
-  # *mobile_scanner Not done
+  # *mobile_scanner
