--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.5+1
+version: 1.0.7+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
@@ -22,21 +22,21 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.1.5
   fluttertoast: ^8.1.1
-  webview_flutter: ^4.0.0
   get: ^4.6.5
-
   intl: ^0.17.0
   lottie: ^1.4.3
   mobile_scanner: ^2.1.0
   path_provider: ^2.0.11
   pie_chart: ^5.3.2
+  sentry_flutter: ^6.19.0
   share_plus: ^6.2.0
   table_calendar: ^3.0.8
   timeline_tile: ^2.0.0
+  webview_flutter: ^4.0.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
@@ -54,24 +54,24 @@ flutter:
     - assets/pdf/
     - assets/png/
   #   - images/a_dot_ham.jpeg
-
 fonts:
-    - family: DMSerif
-      fonts:
-        - asset: assets/fonts/dm_serif/DMSerifDisplay-Regular.ttf
-        - asset: assets/fonts/dm_serif/DMSerifDisplay-Italic.ttf
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  # Dependencies using target specific config
-  # *FCM 
-  # *flutter_downloader //completed
-  # *mobile_scanner //completed
+  - family: DMSerif
+    fonts:
+      - asset: assets/fonts/dm_serif/DMSerifDisplay-Regular.ttf
+      - asset: assets/fonts/dm_serif/DMSerifDisplay-Italic.ttf
+
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
+# Dependencies using target specific config
+# *FCM
+# *flutter_downloader //completed
+# *mobile_scanner //completed
