--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   cached_network_image: ^3.2.2
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.0.0+3
   firebase_core: ^2.1.1
   firebase_messaging: ^14.0.4
   flutter:
@@ -59,6 +60,7 @@ fonts:
     fonts:
       - asset: assets/fonts/dm_serif/DMSerifDisplay-Regular.ttf
       - asset: assets/fonts/dm_serif/DMSerifDisplay-Italic.ttf
+
 # fonts:
 #   - family: Schyler
 #     fonts:
