--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.1.5
-  fluttertoast: ^8.1.1
+  fluttertoast: 8.1.2
   get: ^4.6.5
   image_picker: ^0.8.6+1
   intl: ^0.17.0
