--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cached_network_image: ^3.2.2
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
+  file_picker: ^5.2.5
   firebase_core: ^2.1.1
   firebase_messaging: ^14.0.4
   flutter:
