--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.2.2
+  csv: ^5.0.1
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
   firebase_core: ^2.1.1
