--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
   sdk: ">=2.18.2 <3.3.6"
 
 dependencies:
-  badges: ^3.0.2
+  animations: ^2.0.7
   cached_network_image: ^3.2.2
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
@@ -19,11 +19,13 @@ dependencies:
   firebase_messaging: ^14.2.6
   flutter:
     sdk: flutter
+  flutter_animate: ^4.1.0
   flutter_cached_pdfview: ^0.4.1
   flutter_downloader: ^1.9.1
   flutter_native_splash: ^2.2.11
   flutter_secure_storage: ^6.0.0
   flutter_spinkit: ^5.1.0
+  flutter_staggered_animations: ^1.1.1
   flutter_svg: ^1.1.5
   fluttertoast: 8.1.2
   get: ^4.6.5
