--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.0.8
   timeline_tile: ^2.0.0
   webview_flutter: ^4.0.0
+  badges: ^3.0.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.11.0"
