--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   animations: ^2.0.7
   cached_network_image: ^3.2.2
+  shared_preferences: ^2.1.0
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
