--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,16 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.3.1+1
+version: 1.3.3+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
 
 dependencies:
   animations: ^2.0.7
+  avatar_stack: ^1.2.0
+  badges: ^3.0.2
   cached_network_image: ^3.2.2
-  shared_preferences: ^2.1.0
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
@@ -38,10 +39,10 @@ dependencies:
   pie_chart: ^5.3.2
   sentry_flutter: ^6.19.0
   share_plus: ^6.2.0
+  shared_preferences: ^2.1.0
   table_calendar: ^3.0.8
   timeline_tile: ^2.0.0
   webview_flutter: ^4.0.0
-  badges: ^3.0.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.11.0"
@@ -68,6 +69,7 @@ fonts:
     fonts:
       - asset: assets/fonts/dm_serif/DMSerifDisplay-Regular.ttf
       - asset: assets/fonts/dm_serif/DMSerifDisplay-Italic.ttf
+
 # fonts:
 #   - family: Schyler
 #     fonts:
