--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.3.3+1
+version: 1.3.4+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
@@ -15,6 +15,7 @@ dependencies:
   cached_network_image: ^3.2.2
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
+  device_preview: ^1.1.0
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.5
   firebase_core: ^2.1.1
