--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  dio: ^5.3.0
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.5
   firebase_core: ^2.1.1
