--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.4.6+1
+version: 1.4.7+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
@@ -24,7 +24,7 @@ dependencies:
     sdk: flutter
   flutter_animate: ^4.1.0
   flutter_cached_pdfview: ^0.4.1
-  flutter_downloader: ^1.10.2
+  flutter_downloader: ^1.11.4
   flutter_native_splash: ^2.2.11
   flutter_secure_storage: ^6.0.0
   flutter_spinkit: ^5.1.0
@@ -43,6 +43,7 @@ dependencies:
   table_calendar: ^3.0.8
   timeline_tile: ^2.0.0
   webview_flutter: ^4.0.0
+  open_file: ^3.2.1
 dev_dependencies:
   flutter_launcher_icons: "^0.11.0"
   flutter_lints: ^2.0.0
