--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,11 +30,7 @@
 	<string>Camera is used to scan QR Code</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Sending photos need photo library access</string>
-	<key>UISupportsDocumentBrowser</key> 
-	<true/>
-	<key>LSSupportsOpeningDocumentsInPlace</key>
-	<true/>
-	<key>UIFileSharingEnabled</key>
+	<key>UISupportsDocumentBrowser</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
@@ -62,5 +58,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
+	<key>NSHumanReadableCopyright</key>
+	<string></string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
