--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.5.1+1
+version: 1.5.6+1
 
 environment:
   sdk: ">=2.18.2 <3.3.6"
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.11
   pie_chart: ^5.3.2
   share_plus: ^6.2.0
+  device_info_plus: ^8.0.0
   
   shared_preferences: ^2.1.0
   table_calendar: ^3.0.8
