--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   open_file: ^3.2.1
   http: ^1.1.0
   permission_handler: ^11.0.1
+  qr_code_scanner: ^1.0.1
 dev_dependencies:
   flutter_launcher_icons: "^0.11.0"
   flutter_lints: ^2.0.0
