--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
 
     <application
+        android:enableOnBackInvokedCallback="false"
         android:label="Paytym"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
